--- a/app/views/bestcsiinternationalstudentseventhosts/_form.html.erb
+++ b/app/views/bestcsiinternationalstudentseventhosts/_form.html.erb
@@ -1,14 +1,100 @@
 <%= form_for @bestcsiinternationalstudentseventhost, :html => {:class => "form-horizontal"} do |f| %>
  
-      <%= f.label :imno %>
-      <%= f.text_field :imno %>
+    <div class="form-group">
+      <%= f.label :imno , "Institution Membership Number" %>
+      <%= f.text_field :imno  , class: "form-control"%>
+    </div>
+    <div class="form-group">
+     <label>Institution Name</label>
+     <input type="text" class="form-control">   
+    </div>
+    <div class="row">
+    <div class="form-group col-md-4">
+      <label>Postal Address</label>
+      <input type="text" class="form-control"> 
+    </div>
+   
       
-      <%= f.label :volunteers %>
-      <%= f.text_field :volunteers %>
-      
-      <%= f.label :volunteers_added %>
-      <%= f.text_field :volunteers_added %>
     
-      <%= f.submit "Submit"  %>
+    <div class="form-group col-md-4">
+      <label>City</label>
+      <input type="text" class="form-control"> 
+    </div>
+    <div class="form-group col-md-4">
+      <label>Pin</label>
+      <input type="text" class="form-control"> 
+    </div>
+    </div>
+    <div class="row">
+    <div class="form-group col-md-4">
+      <label>State</label>
+      <input type="text" class="form-control"> 
+    </div>
+
+    
+    
+      
+    
+    <div class="form-group col-md-4">
+      <label>Phone Number</label>
+      <input type="text" class="form-control"> 
+    </div>
+    <div class="form-group col-md-4">
+      <label>Email</label>
+      <input type="email" class="form-control"> 
+    </div>
+    </div>
+    <div class="form-group">
+      <label>SBC Name</label>
+      <input type="text" class="form-control"> 
+    </div>
+    <div class="row">
+      
+    
+    <div class="form-group col-md-3">
+      <label>SBC Designation</label>
+      <input type="text" class="form-control"> 
+    </div>
+    <div class="form-group col-md-3">
+      <label>SBC Department</label>
+      <input type="text" class="form-control"> 
+    </div>
+    
+      
+    
+    <div class="form-group col-md-3">
+      <label>SBC Email</label>
+      <input type="email" class="form-control"> 
+    </div>
+    <div class="form-group col-md-3">
+      <label>SBC Phonenumber</label>
+      <input type="text" class="form-control"> 
+    </div>
+    </div>
+    
+    <div class="row">
+      
+    
+    <div class="form-group col-md-4">
+      <label>SBC CSI Institution Membership number</label>
+      <input type="text" class="form-control"> 
+    </div>
+    
+    <div class="form-group col-md-4">
+      <%= f.label :volunteers %>
+      <%= f.text_field :volunteers , class: "form-control" %>
+    </div>
+    <div class="form-group col-md-4">
+      <%= f.label :volunteers_added %>
+      <%= f.text_field :volunteers_added , class: "form-control" %>
+    </div>
+    </div>
+    
+    
+    <div class="form-group">
+        <div class="col-md-offset-5 col-md-2">
+            <%= f.submit "Submit" , class: "btn btn-primary btn-lg" %>
+        </div>
+    </div>
     
 <% end %>   
