--- a/app/views/bestcsiinternationalstudentseventhosts/show.html.erb
+++ b/app/views/bestcsiinternationalstudentseventhosts/show.html.erb
@@ -1,6 +1,48 @@
-<h1>Created</h1>
+<h2 align="center">Submitted Details</h2>
 
-<%= @bestcsiinternationalstudentseventhost.institute.imno %>
-<%= @bestcsiinternationalstudentseventhost.institute.name %>
-<%= @bestcsiinternationalstudentseventhost.volunteers %>
-<%= @bestcsiinternationalstudentseventhost.volunteers_added %>
+    <div class="submitted-details">
+      <p>Institution Membership No: <%= @bestcsiinternationalstudentseventhost.imno %></p>
+      
+    
+      <p>Institution Name: <%=  @bestcsiinternationalstudentseventhost.institute.name %></p>
+    
+    
+      <p>Address:  <%=  @bestcsiinternationalstudentseventhost.institute.address %></p>
+  
+   
+      <p>City:  <%=  @bestcsiinternationalstudentseventhost.institute.city %></p>
+   
+    
+      <p>Pin:  <%=  @bestcsiinternationalstudentseventhost.institute.pincode %></p>
+  
+   
+      <p>State:  <%=  @bestcsiinternationalstudentseventhost.institute.state %></p>
+    
+    
+      <p>SBC Name:  <%=  @bestcsiinternationalstudentseventhost.institute.sbcs.first.sbc_name %></p>
+      
+    
+      <p>SBC Phone:  <%=  @bestcsiinternationalstudentseventhost.institute.sbcs.first.sbc_phone %></p>
+   
+    
+      
+      <p>SBC email:  <%=  @bestcsiinternationalstudentseventhost.institute.sbcs.first.sbc_email %></p>
+     
+    
+      <p>No of CSI voulenteers:  <%=  @bestcsiinternationalstudentseventhost.volunteers %></p>
+      
+   
+      <p>No of CSI voulenteers added:  <%=  @bestcsiinternationalstudentseventhost.volunteers_added %></p>
+      
+    </div>
+
+
+<div class="showpage-links">
+  <%= link_to "Edit Details" ,   edit_bestcsiinternationalstudentseventhost_path(@bestcsiinternationalstudentseventhost) %> |
+  <%= link_to "Delete" , bestcsiinternationalstudentseventhost_path(@bestcsiinternationalstudentseventhost), method: :delete , data: {confirm: "Are you sure ?"}  %> | 
+  
+</div>  
+
+
+
+    
