--- a/app/views/bestcsiinternationalstudentseventhosts/getname.js.erb
+++ b/app/views/bestcsiinternationalstudentseventhosts/getname.js.erb
@@ -18,3 +18,7 @@ $('#sbc-name').val('<%= @bestcsiinternationalstudentseventhost.sbcs.first.sbc_na
 $('#sbc-email').val('<%= @bestcsiinternationalstudentseventhost.sbcs.first.sbc_email %>');
 $('#sbc-phone').val('<%= @bestcsiinternationalstudentseventhost.sbcs.first.sbc_phone %>');
 
+$('#na').val('<%= @bestcsiinternationalstudentseventhost.nominating_authority %>');
+$('#na-phone').val('<%= @bestcsiinternationalstudentseventhost.na_phone %>');
+$('#na-email').val('<%= @bestcsiinternationalstudentseventhost.na_email %>');
+
