--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -14,6 +14,11 @@
     <h2><%= link_to "Longest Continuous SBC Award" ,new_longestcontinuoussbc_path %> </h2>
 </div>
 
+<div class="award-title">
+    <h2><%= link_to "Facultu with maximum publications Award" ,new_facmaxpublishing_path %> </h2>
+</div>
+
+
 
 
 </div>
