finsied form submit of 3rd to 9th award

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -18,6 +18,18 @@
     <h2><%= link_to "Facultu with maximum publications Award" ,new_facmaxpublishing_path %> </h2>
 </div>
 
+<div class="award-title">
+    <h2><%= link_to "Paper Presenter at International Conferences Award" ,new_paperpresenterintconference_path %> </h2>
+</div>
+
+<div class="award-title">
+    <h2><%= link_to "Student with maximum Publications Award" ,new_studentmaxpublishing_path %> </h2>
+</div>
+
+<div class="award-title">
+    <h2><%= link_to "Student Branch Activist Award" ,new_studentbranchactivist_path %> </h2>
+</div>
+
 
 
 
