--- a/app/views/bestcsiinternationalstudentseventhosts/_form.html.erb
+++ b/app/views/bestcsiinternationalstudentseventhosts/_form.html.erb
@@ -65,6 +65,19 @@
     </div>
     </div>
     
+    <div>
+    <p><strong>Internationalevent/Competitions:</strong></p>
+
+    <%= f.fields_for :internationalevents do |i| %>
+      <%= render 'internationalevent_fields', f: i %>
+      
+    <% end %>
+    
+    <div class="links">
+        <%= link_to_add_association 'Add Event', f, :internationalevents %>
+    </div>
+   </div>
+    
     
     <div class="form-group">
         <div class="col-md-offset-5 col-md-2">
