--- a/app/views/longestcontinuoussbcs/_form.html.erb
+++ b/app/views/longestcontinuoussbcs/_form.html.erb
@@ -65,6 +65,19 @@
     </div>
     </div>
     
+    <div>
+    <p><strong>SBC Tenure Details:</strong></p>
+
+    <%= f.fields_for :sbc_tenure_details do |i| %>
+      <%= render 'sbc_tenure_detail_fields', f: i %>
+      
+    <% end %>
+    
+    <div class="links">
+        <%= link_to_add_association 'Add Details', f, :sbc_tenure_details %>
+    </div>
+   </div>
+    
     
     <div class="form-group">
         <div class="col-md-offset-5 col-md-2">
