styled first three forms

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -54,3 +54,23 @@
 .form-horizontal .form-group{
     margin-right: 15px;
 }
+
+.primary-form{
+    
+}
+
+.institution-details{
+    
+}
+.sbc-details{
+    
+}
+.sub-form-title{
+    text-align: center;
+    font-size: 1.5em;
+    margin: 1em;
+    letter-spacing: .1em;
+}
+.remove-sub-form-button{
+        margin-top: 1.7em;
+}
