--- a/app/views/bestcsiinternationalstudentseventhosts/new.html.erb
+++ b/app/views/bestcsiinternationalstudentseventhosts/new.html.erb
@@ -1,3 +1,5 @@
-<h2 align="center">Enter award details for Best CSI International Students Event</h2>
+<h3 align="center">Enter Details for the Best CSI International Students Event Host Award</h2>
+
+<br>
 
 <%= render "form" %>
