--- a/app/views/bestcsiinternationalstudentseventhosts/_form.html.erb
+++ b/app/views/bestcsiinternationalstudentseventhosts/_form.html.erb
@@ -1,17 +1,20 @@
 <%= form_for @bestcsiinternationalstudentseventhost, :html => {:class => "form-horizontal"} do |f| %>
     
-    <div class="form-group">
+    
+    <div class="primary-form">
+    <div class="row institution-details">
+      <!--institution details-->
+      
+    <div class="form-group col-md-4">
      <label>Institution Name</label>
      <input type="text" class="form-control" id="name">   
     </div>
-    <div class="form-group">
-      <%= f.label :imno , "Institution Membership Number" %>
+    <div class="form-group col-md-4">
+      <%= f.label :imno , "I.M.N.O" %>
       <%= f.text_field :imno  , class: "form-control" , id:"imno"%>
     </div>
     
-    
-    <div class="row">
-    <div class="form-group col-md-3">
+    <div class="form-group col-md-4">
       <label>Postal Address</label>
       <input type="text" class="form-control" id="address"> 
     </div>
@@ -19,69 +22,77 @@
       <label>District</label>
       <input type="text" class="form-control" id="district"> 
     </div>
-    <div class="form-group col-md-2">
+    <div class="form-group col-md-3">
       <label>City</label>
       <input type="text" class="form-control" id="city"> 
     </div>
-    <div class="form-group col-md-2">
+    <div class="form-group col-md-3">
       <label>Pin</label>
       <input type="text" class="form-control" id="pin"> 
     </div>
-    <div class="form-group col-md-2">
+    <div class="form-group col-md-3">
       <label>State</label>
       <input type="text" class="form-control" id="state"> 
     </div>
-    </div>
     
-    <div class="row">
-    <div class="form-group col-md-3">
+    
+    
+    <!--sbc details-->
+    
+    <div class="sbc-details">
+    <div class="form-group col-md-4">
       <label>SBC Name</label>
       <input type="text" class="form-control" id="sbc-name"> 
     </div>
     
-    <div class="form-group col-md-3">
-      <label>SBC CSI Imno</label>
+    <div class="form-group col-md-4">
+      <label>Membership No</label>
       <input type="text" class="form-control" id="sbc-imno"> 
     </div>
-    <div class="form-group col-md-3">
+    <div class="form-group col-md-4">
       <label>SBC Email</label>
       <input type="email" class="form-control" id="sbc-email"> 
     </div>
-    <div class="form-group col-md-3">
+    <div class="form-group col-md-4">
       <label>SBC Phonenumber</label>
       <input type="text" class="form-control" id="sbc-phone"> 
     </div>
-    </div>
+   </div>
     
-    <div class="row">
+    <!--form specific feilds-->
+    
+    
       
-    <div class="form-group col-md-6">
+    <div class="form-group col-md-4">
       <%= f.label :volunteers %>
       <%= f.text_field :volunteers , class: "form-control" %>
     </div>
-    <div class="form-group col-md-6">
-      <%= f.label :volunteers_added %>
+    <div class="form-group col-md-4">
+      <%= f.label :volunteers_added  %>
       <%= f.text_field :volunteers_added , class: "form-control" %>
     </div>
     </div>
     
-    <div>
-    <p><strong>Internationalevent/Competitions:</strong></p>
+    <!--sub form details-->
+    
+    <hr>
+    <p class="sub-form-title">Internationalevent/Competitions:</p>
 
+    
     <%= f.fields_for :internationalevents do |i| %>
+    
       <%= render 'internationalevent_fields', f: i %>
-      
+    
     <% end %>
     
-    <div class="links">
-        <%= link_to_add_association 'Add Event', f, :internationalevents %>
+    <div class="links col-md-12">
+        <%= link_to_add_association 'Add Event', f, :internationalevents , class: "form-button btn btn-primary" %>
     </div>
-   </div>
     
     
     <div class="form-group">
         <div class="col-md-offset-5 col-md-2">
-            <%= f.submit "Submit" , class: "btn btn-primary btn-lg" %>
+            <%= f.submit "Submit" , class: "btn btn-success btn-lg" %>
         </div>
     </div>
     
