--- a/app/views/bestcsiinternationalstudentseventhosts/_internationalevent_fields.html.erb
+++ b/app/views/bestcsiinternationalstudentseventhosts/_internationalevent_fields.html.erb
@@ -1,23 +1,28 @@
+
+<div class="row">
 <div class="nested-fields">
     
-<div class="row">
+
 <div class="form-group col-md-4">
         <%= f.label :competetion_name %>
-        <%= f.text_field :competetion_name %>
+        <%= f.text_field :competetion_name , class: "form-control" %>
 </div>
-<div class="form-group col-md-4">
+<div class="form-group col-md-3">
         <%= f.label :date_of_event %>
-        <%= f.date_field :date_of_event %>
+        <%= f.date_field :date_of_event , class: "form-control" %>
 </div>
 <div class="form-group col-md-4">
-        <%= f.label :no_of_students_from_abroad_with_country_name %>
-        <%= f.text_field :no_of_students_from_abroad_with_country_name %>
+        <%= f.label :no_of_students_from_abroad_with_country_name , "No of students from Abroad / Country Name" %>
+        <%= f.text_field :no_of_students_from_abroad_with_country_name , class: "form-control" %>
 </div>
 
-</div>
-<div>
-   <%= link_to_remove_association "Remove", f, class: "form-button btn btn-default" %> 
+
+<div class="form-group col-md-1 remove-sub-form-button">
+   <%= link_to_remove_association "Remove", f, class: "form-button btn btn-danger" %> 
 </div>
 
+
+
+</div> 
 
 </div>
