--- a/app/views/highestsponsorshipofcsievents/new.html.erb
+++ b/app/views/highestsponsorshipofcsievents/new.html.erb
@@ -1,3 +1,3 @@
-<h2 align="center">Enter award details for Best CSI International Students Event</h2>
-
+<h2 align="center">Enter details for Highest Sponsorship of CSI Event Award</h2>
+<br>
 <%= render "form" %>
