--- a/app/views/longestcontinuoussbcs/_sbc_tenure_detail_fields.html.erb
+++ b/app/views/longestcontinuoussbcs/_sbc_tenure_detail_fields.html.erb
@@ -1,26 +1,28 @@
+<div class="row">
 <div class="nested-fields">
     
-<div class="row">
+
 <div class="form-group col-md-3">
         <%= f.label :year %>
-        <%= f.text_field :year %>
+        <%= f.text_field :year , class: "form-control"%>
 </div>
 <div class="form-group col-md-3">
         <%= f.label :institution_name %>
-        <%= f.text_field :institution_name %>
+        <%= f.text_field :institution_name , class: "form-control"%>
 </div>
-<div class="form-group col-md-2">
+<div class="form-group col-md-3">
         <%= f.label :imno_of_institution %>
-        <%= f.text_field :imno_of_institution %>
+        <%= f.text_field :imno_of_institution, class: "form-control" %>
 </div>
 <div class="form-group col-md-2">
         <%= f.label :volunteers %>
-        <%= f.text_field :volunteers %>
+        <%= f.text_field :volunteers , class: "form-control"%>
 </div>
 
-<div>
-   <%= link_to_remove_association "Remove", f, class: "form-button btn btn-default" %> 
+<div class="form-group col-md-1 remove-sub-form-button">
+   <%= link_to_remove_association "Remove", f, class: "form-button btn btn-danger" %> 
 </div>
+
 </div>
 
 
