--- a/app/views/longestcontinuoussbcs/new.html.erb
+++ b/app/views/longestcontinuoussbcs/new.html.erb
@@ -1,3 +1,3 @@
-<h2 align="center">Enter award details for Best CSI International Students Event</h2>
+<h2 align="center">Enter  details for Longest Continuous SBC Award</h2>
 
 <%= render "form" %>
