--- a/app/views/bestcsiinternationalstudentseventhosts/_form.html.erb
+++ b/app/views/bestcsiinternationalstudentseventhosts/_form.html.erb
@@ -1,3 +1,6 @@
+
+<%= render 'shared/errors', object: @bestcsiinternationalstudentseventhost %>
+
 <%= form_for @bestcsiinternationalstudentseventhost, :html => {:class => "form-horizontal"} do |f| %>
     
     
@@ -10,7 +13,7 @@
      <input type="text" class="form-control" id="name">   
     </div>
     <div class="form-group col-md-4">
-      <%= f.label :imno , "I.M.N.O" %>
+      <%= f.label :imno , "IMNO" %>
       <%= f.text_field :imno  , class: "form-control" , id:"imno"%>
     </div>
     
@@ -18,19 +21,19 @@
       <label>Postal Address</label>
       <input type="text" class="form-control" id="address"> 
     </div>
-    <div class="form-group col-md-3">
+    <div class="form-group col-md-2">
       <label>District</label>
       <input type="text" class="form-control" id="district"> 
     </div>
-    <div class="form-group col-md-3">
+    <div class="form-group col-md-2">
       <label>City</label>
       <input type="text" class="form-control" id="city"> 
     </div>
-    <div class="form-group col-md-3">
+    <div class="form-group col-md-2">
       <label>Pin</label>
       <input type="text" class="form-control" id="pin"> 
     </div>
-    <div class="form-group col-md-3">
+    <div class="form-group col-md-2">
       <label>State</label>
       <input type="text" class="form-control" id="state"> 
     </div>
@@ -45,7 +48,7 @@
       <input type="text" class="form-control" id="sbc-name"> 
     </div>
     
-    <div class="form-group col-md-4">
+    <div class="form-group col-md-2">
       <label>Membership No</label>
       <input type="text" class="form-control" id="sbc-imno"> 
     </div>
@@ -53,7 +56,7 @@
       <label>SBC Email</label>
       <input type="email" class="form-control" id="sbc-email"> 
     </div>
-    <div class="form-group col-md-4">
+    <div class="form-group col-md-2">
       <label>SBC Phonenumber</label>
       <input type="text" class="form-control" id="sbc-phone"> 
     </div>
@@ -63,19 +66,19 @@
     
     
       
-    <div class="form-group col-md-4">
+    <div class="form-group col-md-2">
       <%= f.label :volunteers %>
       <%= f.text_field :volunteers , class: "form-control" %>
     </div>
-    <div class="form-group col-md-4">
+    <div class="form-group col-md-2">
       <%= f.label :volunteers_added  %>
       <%= f.text_field :volunteers_added , class: "form-control" %>
     </div>
     </div>
-    
+    </div>
     <!--sub form details-->
     
-    <hr>
+    
     <p class="sub-form-title">Internationalevent/Competitions:</p>
 
     
