--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,31 +1,31 @@
-<h1 align="center" id="award-banner">AWARDS</h1>
+<h1 align="center" id="award-banner">The Computer Society of India Awards</h1>
 
 <div class="container award-area">
     
 <div class="award-title">
-    <h2><%= link_to "Best CSI International Students Event Host" , new_bestcsiinternationalstudentseventhost_path %> </h2>
+    <h2><%= link_to "Best CSI International Students Event Host Award" , new_bestcsiinternationalstudentseventhost_path %> </h2>
 </div>
-
+<hr>
 <div class="award-title">
     <h2><%= link_to "Highest Sponsorship of CSI Event Award" , new_highestsponsorshipofcsievent_path %> </h2>
 </div>
-
+<hr>
 <div class="award-title">
     <h2><%= link_to "Longest Continuous SBC Award" ,new_longestcontinuoussbc_path %> </h2>
 </div>
-
+<hr>
 <div class="award-title">
     <h2><%= link_to "Facultu with maximum publications Award" ,new_facmaxpublishing_path %> </h2>
 </div>
-
+<hr>
 <div class="award-title">
     <h2><%= link_to "Paper Presenter at International Conferences Award" ,new_paperpresenterintconference_path %> </h2>
 </div>
-
+<hr>
 <div class="award-title">
     <h2><%= link_to "Student with maximum Publications Award" ,new_studentmaxpublishing_path %> </h2>
 </div>
-
+<hr>
 <div class="award-title">
     <h2><%= link_to "Student Branch Activist Award" ,new_studentbranchactivist_path %> </h2>
 </div>
