--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,4 +1,4 @@
-<h1 align="center" id="award-banner">The Computer Society of India Awards</h1>
+<h1 align="center" id="award-banner">The Computer Society of India</h1>
 
 <div class="container award-area">
     
@@ -15,7 +15,7 @@
 </div>
 <hr>
 <div class="award-title">
-    <h2><%= link_to "Facultu with maximum publications Award" ,new_facmaxpublishing_path %> </h2>
+    <h2><%= link_to "Faculty with maximum publications Award" ,new_facmaxpublishing_path %> </h2>
 </div>
 <hr>
 <div class="award-title">
