--- a/app/views/studentbranchactivists/_form.html.erb
+++ b/app/views/studentbranchactivists/_form.html.erb
@@ -1,3 +1,6 @@
+
+<%= render 'shared/errors', object: @studentbranchactivist %>
+
 <%= form_for @studentbranchactivist, :html => {:class => "form-horizontal"} do |f| %>
     
     <div class="form-group">
@@ -104,6 +107,17 @@
       <%= f.text_field :volunteers_added , class: "form-control" %>
     </div>
     
+    </div>
+    
+    <p class="sub-form-title">Event details:</p>
+
+    <%= f.fields_for :eventdetailsbystudentactivists do |i| %>
+      <%= render 'eventdetailsbystudentactivist_fields', f: i %>
+      
+    <% end %>
+    
+    <div class="links col-md-12">
+        <%= link_to_add_association 'Add Event', f, :eventdetailsbystudentactivists , class: "form-button btn btn-primary" %>
     </div>
     
     
