--- a/app/views/paperpresenterintconferences/_form.html.erb
+++ b/app/views/paperpresenterintconferences/_form.html.erb
@@ -1,3 +1,5 @@
+<%= render 'shared/errors', object: @paperpresenterintconference %>
+
 <%= form_for @paperpresenterintconference, :html => {:class => "form-horizontal"} do |f| %>
     <!--institute details-->
     <div class="form-group">
@@ -77,6 +79,34 @@
       <%= f.label :has_student_branch %>
       <%= f.check_box :has_student_branch , class: "form-control" %>
     </div>
+    </div>
+    
+    <!--subform details-->
+    
+    <!--outsideindiapaperpresentations-->
+    
+    <p class="sub-form-title">Details of papers  presented in International Conference held  Outside India:</p>
+
+    <%= f.fields_for :outsideindiapaperpresentations do |i| %>
+      <%= render 'outsideindiapaperpresentation_fields', f: i %>
+      
+    <% end %>
+    
+    <div class="links col-md-12">
+        <%= link_to_add_association 'Add Event', f, :outsideindiapaperpresentations , class: "form-button btn btn-primary" %>
+    </div>
+    
+    <!--insideindiapaperpresentations-->
+    
+    <p class="sub-form-title">Details of papers  presented in International Conference held  Inside India:</p>
+
+    <%= f.fields_for :insideindiapaperpresentations do |i| %>
+      <%= render 'insideindiapaperpresentation_fields', f: i %>
+      
+    <% end %>
+    
+    <div class="links col-md-12">
+        <%= link_to_add_association 'Add Event', f, :insideindiapaperpresentations , class: "form-button btn btn-primary" %>
     </div>
     
     
