--- a/app/views/bestcsiinternationalstudentseventhosts/_form.html.erb
+++ b/app/views/bestcsiinternationalstudentseventhosts/_form.html.erb
@@ -7,21 +7,22 @@
     <div class="primary-form">
     <div class="row institution-details">
       <!--institution details-->
-      
-    <div class="form-group col-md-4">
-     <label>Institution Name</label>
+    <p class="primary-form-subheading">Institution Details</p>  
+    <div class="form-group col-md-6">
+     <label>Name</label>
      <input type="text" class="form-control" id="name">   
     </div>
-    <div class="form-group col-md-4">
-      <%= f.label :imno , "IMNO" %>
-      <%= f.text_field :imno  , class: "form-control" , id:"imno"%>
-    </div>
-    
-    <div class="form-group col-md-4">
+    <div class="form-group col-md-6">
       <label>Postal Address</label>
       <input type="text" class="form-control" id="address"> 
     </div>
     <div class="form-group col-md-2">
+      <%= f.label :imno , "IMNO" %>
+      <%= f.text_field :imno  , class: "form-control" , id:"imno"%>
+    </div>
+    
+    
+    <div class="form-group col-md-3">
       <label>District</label>
       <input type="text" class="form-control" id="district"> 
     </div>
@@ -33,7 +34,7 @@
       <label>Pin</label>
       <input type="text" class="form-control" id="pin"> 
     </div>
-    <div class="form-group col-md-2">
+    <div class="form-group col-md-3">
       <label>State</label>
       <input type="text" class="form-control" id="state"> 
     </div>
@@ -41,23 +42,23 @@
     
     
     <!--sbc details-->
-    
+    <p class="primary-form-subheading">SBC Details</p>    
     <div class="sbc-details">
-    <div class="form-group col-md-4">
-      <label>SBC Name</label>
+    <div class="form-group col-md-2">
+      <label>Name</label>
       <input type="text" class="form-control" id="sbc-name"> 
     </div>
     
     <div class="form-group col-md-2">
-      <label>Membership No</label>
+      <label>Mem.No</label>
       <input type="text" class="form-control" id="sbc-imno"> 
     </div>
-    <div class="form-group col-md-4">
-      <label>SBC Email</label>
+    <div class="form-group col-md-3">
+      <label>Email</label>
       <input type="email" class="form-control" id="sbc-email"> 
     </div>
-    <div class="form-group col-md-2">
-      <label>SBC Phonenumber</label>
+    <div class="form-group col-md-3">
+      <label>Phonenumber</label>
       <input type="text" class="form-control" id="sbc-phone"> 
     </div>
    </div>
@@ -66,12 +67,12 @@
     
     
       
-    <div class="form-group col-md-2">
+    <div class="form-group col-md-1">
       <%= f.label :volunteers %>
       <%= f.text_field :volunteers , class: "form-control" %>
     </div>
-    <div class="form-group col-md-2">
-      <%= f.label :volunteers_added  %>
+    <div class="form-group col-md-1">
+      <%= f.label :volunteers_added , "Added"  %>
       <%= f.text_field :volunteers_added , class: "form-control" %>
     </div>
     </div>
@@ -79,16 +80,27 @@
     <!--sub form details-->
     
     
-    <p class="sub-form-title">Internationalevent/Competitions:</p>
-
+    <p class="primary-form-subheading">International Event/Competitions:</p>
+    
+    
+    <br>
+    <div class="row">
+      <div class="col-md-4"><p class="subform-head"><strong>CSI organised Event / Competition name</strong></p></div>
+      <div class="col-md-3"><p  class="subform-head"><strong>Date of event</strong></p></div>
+      <div class="col-md-5"><p><strong>No. of students participated from abroad with Country name</strong></p></div>
+      
+      
+    </div>
     
     <%= f.fields_for :internationalevents do |i| %>
     
       <%= render 'internationalevent_fields', f: i %>
-    
+   
     <% end %>
     
+    
     <div class="links col-md-12">
+      <br>
         <%= link_to_add_association 'Add Event', f, :internationalevents , class: "form-button btn btn-primary" %>
     </div>
     
