--- a/app/views/bestcsiinternationalstudentseventhosts/_internationalevent_fields.html.erb
+++ b/app/views/bestcsiinternationalstudentseventhosts/_internationalevent_fields.html.erb
@@ -1,28 +1,32 @@
 
-<div class="row">
-<div class="nested-fields">
-    
 
-<div class="form-group col-md-4">
-        <%= f.label :competetion_name %>
+<div class="row">
+
+
+
+<div class="nested-fields">
+
+<div class="form-group sf col-md-4">
+        
         <%= f.text_field :competetion_name , class: "form-control" %>
 </div>
-<div class="form-group col-md-3">
-        <%= f.label :date_of_event %>
-        <%= f.date_field :date_of_event , class: "form-control" %>
+
+<div class="form-group sf col-md-3">
+        
+      <%= f.date_field :date_of_event , class: "form-control" %>
 </div>
-<div class="form-group col-md-4">
-        <%= f.label :no_of_students_from_abroad_with_country_name , "No of students from Abroad / Country Name" %>
+
+<div class="form-group sf col-md-4">
+        
         <%= f.text_field :no_of_students_from_abroad_with_country_name , class: "form-control" %>
 </div>
 
 
-<div class="form-group col-md-1 remove-sub-form-button">
-   <%= link_to_remove_association "Remove", f, class: "form-button btn btn-danger" %> 
+<div class="form-group sf col-md-1 remove-sub-form-button">
+   <%= link_to_remove_association "Remove", f, class: "form-button btn btn-danger btn-md" %>
 </div>
 
 
 
 </div> 
-
 </div>
