--- a/app/views/highestsponsorshipofcsievents/_form.html.erb
+++ b/app/views/highestsponsorshipofcsievents/_form.html.erb
@@ -4,22 +4,20 @@
     
     
     <div class="row">
-    <div class="form-group col-md-4">
-     <label>Institution Name</label>
+      <p class="primary-form-subheading">Institution Details</p>  
+    <div class="form-group col-md-6">
+     <label>Name</label>
      <input type="text" class="form-control" id="name">   
     </div>
-    <div class="form-group col-md-4">
-      <%= f.label :imno , "Institution Membership Number" %>
-      <%= f.text_field :imno  , class: "form-control" , id:"imno"%>
-    </div>
-    
-    
-    
-    <div class="form-group col-md-4">
+    <div class="form-group col-md-6">
       <label>Postal Address</label>
       <input type="text" class="form-control" id="address"> 
     </div>
     <div class="form-group col-md-2">
+      <%= f.label :imno , "IMNO" %>
+      <%= f.text_field :imno  , class: "form-control" , id:"imno"%>
+    </div>
+    <div class="form-group col-md-3">
       <label>District</label>
       <input type="text" class="form-control" id="district"> 
     </div>
@@ -31,47 +29,63 @@
       <label>Pin</label>
       <input type="text" class="form-control" id="pin"> 
     </div>
-    <div class="form-group col-md-2">
+    <div class="form-group col-md-3">
       <label>State</label>
       <input type="text" class="form-control" id="state"> 
     </div>
     
     
-    
-    <div class="form-group col-md-4">
-      <label>SBC Name</label>
+    <p class="primary-form-subheading">SBC Details</p>
+    <div class="form-group col-md-2">
+      <label>Name</label>
       <input type="text" class="form-control" id="sbc-name"> 
     </div>
     
     <div class="form-group col-md-2">
-      <label>SBC CSI Imno</label>
+      <label>Mem.No</label>
       <input type="text" class="form-control" id="sbc-imno"> 
     </div>
-    <div class="form-group col-md-4">
-      <label>SBC Email</label>
+    <div class="form-group col-md-3">
+      <label>Email</label>
       <input type="email" class="form-control" id="sbc-email"> 
     </div>
-    <div class="form-group col-md-2">
-      <label>SBC Phonenumber</label>
+    <div class="form-group col-md-3">
+      <label>Phonenumber</label>
       <input type="text" class="form-control" id="sbc-phone"> 
     </div>
    
     
-    <div class="row">
+    
       
-    <div class="form-group col-md-2">
+    <div class="form-group col-md-1">
       <%= f.label :volunteers %>
       <%= f.text_field :volunteers , class: "form-control" %>
     </div>
-    <div class="form-group col-md-2">
-      <%= f.label :volunteers_added %>
+    <div class="form-group col-md-1">
+      <%= f.label :volunteers_added , "Added" %>
       <%= f.text_field :volunteers_added , class: "form-control" %>
     </div>
-    </div>
+    
     </div>
     
-    <p class="sub-form-title">Details of support extended for CSI event
+    
+    <!--nested form-->
+    
+    
+    <p class="primary-form-subheading">Details of support extended for CSI event
     organised by CSI Chapters / Divisions / SIGs (Do not include College organised events): </p>
+    
+    <br></br>
+    <div class="row">
+      
+      
+      <div class="col-md-2"><p class="subform-head"><strong>Name of the Event</strong></p></div>
+      <div class="col-md-2"><p class="subform-head"><strong>Date of the Event</strong></p></div>
+      <div class="col-md-3"><p class="subform-head"><strong>Organised By</strong></p></div>
+      <div class="col-md-2"><p class="subform-head"><strong>Support Details</strong></p></div>
+      <div class="col-md-2"><p ><strong>Monetary Value</strong></p></div>
+    </div>
+    
 
     <%= f.fields_for :supportforcsievents do |i| %>
       <%= render 'supportforcsievent_fields', f: i %>
