--- a/app/views/longestcontinuoussbcs/_form.html.erb
+++ b/app/views/longestcontinuoussbcs/_form.html.erb
@@ -4,22 +4,20 @@
 <%= form_for @longestcontinuoussbc, :html => {:class => "form-horizontal"} do |f| %>
     
     <div class="row">
-    <div class="form-group col-md-4">
-     <label>Institution Name</label>
+    <p class="primary-form-subheading">Institution Details</p> 
+    <div class="form-group col-md-6">
+     <label>Name</label>
      <input type="text" class="form-control" id="name">   
     </div>
-    <div class="form-group col-md-4">
-      <%= f.label :imno , "Institution Membership Number" %>
-      <%= f.text_field :imno  , class: "form-control" , id:"imno"%>
-    </div>
-    
-    
-    
-    <div class="form-group col-md-4">
+    <div class="form-group col-md-6">
       <label>Postal Address</label>
       <input type="text" class="form-control" id="address"> 
     </div>
     <div class="form-group col-md-2">
+      <%= f.label :imno , "IMNO" %>
+      <%= f.text_field :imno  , class: "form-control" , id:"imno"%>
+    </div>
+    <div class="form-group col-md-3">
       <label>District</label>
       <input type="text" class="form-control" id="district"> 
     </div>
@@ -31,46 +29,56 @@
       <label>Pin</label>
       <input type="text" class="form-control" id="pin"> 
     </div>
-    <div class="form-group col-md-2">
+    <div class="form-group col-md-3">
       <label>State</label>
       <input type="text" class="form-control" id="state"> 
     </div>
    
     
-    
-    <div class="form-group col-md-4">
-      <label>SBC Name</label>
+    <p class="primary-form-subheading">SBC Details</p> 
+    <div class="form-group col-md-2">
+      <label>Name</label>
       <input type="text" class="form-control" id="sbc-name"> 
     </div>
     
     <div class="form-group col-md-2">
-      <label>SBC CSI Imno</label>
+      <label>CSI Imno</label>
       <input type="text" class="form-control" id="sbc-imno"> 
     </div>
-    <div class="form-group col-md-4">
-      <label>SBC Email</label>
+    <div class="form-group col-md-3">
+      <label>Email</label>
       <input type="email" class="form-control" id="sbc-email"> 
     </div>
-    <div class="form-group col-md-2">
-      <label>SBC Phonenumber</label>
+    <div class="form-group col-md-3">
+      <label>Phonenumber</label>
       <input type="text" class="form-control" id="sbc-phone"> 
     </div>
     
     
     
       
-    <div class="form-group col-md-2">
+    <div class="form-group col-md-1">
       <%= f.label :volunteers %>
       <%= f.text_field :volunteers , class: "form-control" %>
     </div>
-    <div class="form-group col-md-2">
-      <%= f.label :volunteers_added %>
+    <div class="form-group col-md-1">
+      <%= f.label :volunteers_added ,"Added" %>
       <%= f.text_field :volunteers_added , class: "form-control" %>
     </div>
     </div>
     
     
-    <p class="sub-form-title">SBC tenure details:</p>
+    
+    <p class="primary-form-subheading">SBC tenure details:</p>
+    
+    <br>
+    <div class="row">
+      <div class="col-md-3"><p class="subform-head"><strong>Year</strong></p></div>
+      <div class="col-md-3"><p  class="subform-head"><strong>Institution Name</strong></p></div>
+      <div class="col-md-3"><p><strong>Imno</strong></p></div>
+      <div class="col-md-2"><p><strong>No. of Volunteers</strong></p></div>
+    </div>
+    
 
     <%= f.fields_for :sbc_tenure_details do |i| %>
       <%= render 'sbc_tenure_detail_fields', f: i %>
@@ -78,6 +86,7 @@
     <% end %>
     
     <div class="links col-md-12">
+      <br>
         <%= link_to_add_association 'Add Event', f, :sbc_tenure_details , class: "form-button btn btn-primary" %>
     </div>
    
