--- a/app/views/paperpresenterintconferences/_form.html.erb
+++ b/app/views/paperpresenterintconferences/_form.html.erb
@@ -1,112 +1,125 @@
+
 <%= render 'shared/errors', object: @paperpresenterintconference %>
 
 <%= form_for @paperpresenterintconference, :html => {:class => "form-horizontal"} do |f| %>
-    <!--institute details-->
-    <div class="form-group">
-     <label>Institution Name</label>
+    
+    <p class="primary-form-subheading">Institution Details</p> 
+    <div class="row institution-details">
+    <div class="form-group col-md-6">
+     <label>Name</label>
      <input type="text" class="form-control" id="name">   
     </div>
-    <div class="form-group">
-      <%= f.label :imno , "Institution Membership Number" %>
-      <%= f.text_field :imno  , class: "form-control" , id:"imno"%>
-    </div>
-    
-    
-    <div class="row">
-    <div class="form-group col-md-3">
+    <div class="form-group col-md-6">
       <label>Postal Address</label>
       <input type="text" class="form-control" id="address"> 
+    </div>
+    <div class="form-group col-md-3">
+      <%= f.label :imno , "IMNO" %>
+      <%= f.text_field :imno  , class: "form-control" , id:"imno"%>
     </div>
     <div class="form-group col-md-3">
       <label>District</label>
       <input type="text" class="form-control" id="district"> 
     </div>
-    <div class="form-group col-md-2">
+    <div class="form-group col-md-3">
       <label>City</label>
       <input type="text" class="form-control" id="city"> 
     </div>
-    <div class="form-group col-md-2">
+    <div class="form-group col-md-3">
       <label>Pin</label>
       <input type="text" class="form-control" id="pin"> 
     </div>
-    <div class="form-group col-md-2">
+    <div class="form-group col-md-3">
       <label>State</label>
       <input type="text" class="form-control" id="state"> 
     </div>
-    </div>
     
-    
-    
-    
-    <div class="row">
     <div class="form-group col-md-3">
-      <label>Name of the Head of the Institution</label>
+      <label>Head of the Institution</label>
       <input type="text" class="form-control" id="na"> 
     </div>
     
     <div class="form-group col-md-3">
-      <label>NA Phone number</label>
+      <label>Phone number</label>
       <input type="text" class="form-control" id="na-phone"> 
     </div>
     <div class="form-group col-md-3">
-      <label>NA Email</label>
+      <label>Email</label>
       <input type="email" class="form-control" id="na-email"> 
     </div>
+    
+    
+    
+    <!--sbc details-->
+    <p class="primary-form-subheading">SBC Details</p>    
+  
+    <div class="form-group col-md-3">
+      <label>Name</label>
+      <input type="text" class="form-control" id="sbc-name"> 
+    </div>
+    
+    <div class="form-group col-md-3">
+      <label>Mem.No</label>
+      <input type="text" class="form-control" id="sbc-imno"> 
+    </div>
+    <div class="form-group col-md-3">
+      <label>Email</label>
+      <input type="email" class="form-control" id="sbc-email"> 
+    </div>
+    <div class="form-group col-md-3">
+      <label>Phonenumber</label>
+      <input type="text" class="form-control" id="sbc-phone"> 
     </div>
     
     
-    <!--form specific details-->
     
-    <div class="row">
+     <!--form specific details-->
+    
+    <p class="primary-form-subheading">Volunteer Details</p>  
       
     <div class="form-group col-md-3">
-      <%= f.label :faculty_name %>
+      <%= f.label :faculty_name , "Name" %>
       <%= f.text_field :faculty_name , class: "form-control" %>
     </div>
     <div class="form-group col-md-3">
-      <%= f.label :candidate_csi_membership_no %>
-      <%= f.text_field :candidate_csi_membership_no , class: "form-control" %>
-    </div>
-    <div class="form-group col-md-2">
-      <%= f.label :faculty_email %>
+      <%= f.label :faculty_email  , "Email" %>
       <%= f.email_field :faculty_email , class: "form-control" %>
     </div>
     <div class="form-group col-md-2">
-      <%= f.label :valid_till %>
+      <%= f.label :candidate_csi_membership_no , "CSI Mem.Id" %>
+      <%= f.text_field :candidate_csi_membership_no , class: "form-control" %>
+    </div>
+    
+    <div class="form-group col-md-2">
+      <%= f.label :valid_till  , "Id Valid Till" %>
       <%= f.date_field :valid_till , class: "form-control" %>
     </div>
     <div class="form-group col-md-2">
-      <%= f.label :has_student_branch %>
-      <%= f.check_box :has_student_branch , class: "form-control" %>
+      <%= f.label :has_student_branch  , "Has Student Branch" %>
+      <%= f.date_field :has_student_branch , class: "form-control" %>
     </div>
+    
+    
+    
+    
+   <p class="primary-form-subheading">Event Details:</p>  
+    
+    <br>
+    <div class="row">
+      <div class="col-md-3"><p class="subform-head"><strong>Event name</strong></p></div>
+      <div class="col-md-3"><p  class="subform-head"><strong>Event held at which Place</strong></p></div>
+      <div class="col-md-6"><p><strong>Role played:Paper Presenter/Competitor/Speaker/Other(specify)& topic chosen</strong></p></div>
+      
     </div>
-    
-    <!--subform details-->
-    
-    <!--outsideindiapaperpresentations-->
-    
-    <p class="sub-form-title">Details of papers  presented in International Conference held  Outside India:</p>
 
-    <%= f.fields_for :outsideindiapaperpresentations do |i| %>
-      <%= render 'outsideindiapaperpresentation_fields', f: i %>
+    <%= f.fields_for :paperpresentationdetails do |i| %>
+      <%= render 'paperpresentationdetail_fields', f: i %>
       
     <% end %>
     
     <div class="links col-md-12">
-        <%= link_to_add_association 'Add Event', f, :outsideindiapaperpresentations , class: "form-button btn btn-primary" %>
-    </div>
-    
-    <!--insideindiapaperpresentations-->
-    
-    <p class="sub-form-title">Details of papers  presented in International Conference held  Inside India:</p>
-
-    <%= f.fields_for :insideindiapaperpresentations do |i| %>
-      <%= render 'insideindiapaperpresentation_fields', f: i %>
-      
-    <% end %>
-    
-    <div class="links col-md-12">
-        <%= link_to_add_association 'Add Event', f, :insideindiapaperpresentations , class: "form-button btn btn-primary" %>
+        <br>
+        <%= link_to_add_association 'Add Event', f, :paperpresentationdetails , class: "form-button btn btn-primary" %>
     </div>
     
     
