--- a/app/views/paperpresenterintconferences/_paperpresentationdetail_fields.html.erb
+++ b/app/views/paperpresenterintconferences/_paperpresentationdetail_fields.html.erb
@@ -2,24 +2,28 @@
 <div class="nested-fields">
     
 
-<div class="form-group col-md-3">
-        <%= f.label :name_of_conference %>
+<div class="form-group sf col-md-2">
+        
         <%= f.text_field :name_of_conference , class: "form-control"%>
 </div>
-<div class="form-group col-md-3">
-        <%= f.label :date_of_conference %>
+<div class="form-group sf col-md-2">
+       
         <%= f.date_field :date_of_conference , class: "form-control"%>
 </div>
-<div class="form-group col-md-3">
-        <%= f.label :organised_by %>
+<div class="form-group sf col-md-3">
+       
         <%= f.text_field :organised_by, class: "form-control" %>
 </div>
-<div class="form-group col-md-2">
-        <%= f.label :name_and_place_of_conference %>
+<div class="form-group sf col-md-3">
+       
         <%= f.text_field :name_and_place_of_conference , class: "form-control"%>
 </div>
+<div class="form-group sf col-md-1">
+      
+        <%= f.text_field :india_or_outside , class: "form-control"%>
+</div>
 
-<div class="form-group col-md-1 remove-sub-form-button">
+<div class="form-group sf col-md-1 remove-sub-form-button">
    <%= link_to_remove_association "Remove", f, class: "form-button btn btn-danger" %> 
 </div>
 
