--- a/app/views/paperpresenterintconferences/new.html.erb
+++ b/app/views/paperpresenterintconferences/new.html.erb
@@ -1,3 +1,3 @@
-<h2 align="center">Enter award details for Paper Presentation at International Events</h2>
+<h3 align="center">Enter award details for Paper Presentation at International Events</h3
 
 <%= render "form" %>
