--- a/app/views/studentbranchactivists/_eventdetailsbystudentactivist_fields.html.erb
+++ b/app/views/studentbranchactivists/_eventdetailsbystudentactivist_fields.html.erb
@@ -2,21 +2,21 @@
 <div class="nested-fields">
     
 
-<div class="form-group col-md-3">
-        <%= f.label :event_name %>
+<div class="form-group sf col-md-3">
+       
         <%= f.text_field :event_name , class: "form-control"%>
 </div>
-<div class="form-group col-md-3">
-        <%= f.label :event_place %>
+<div class="form-group sf col-md-3">
+       
         <%= f.text_field :event_place , class: "form-control"%>
 </div>
-<div class="form-group col-md-3">
-        <%= f.label :role_played %>
+<div class="form-group sf col-md-5">
+        
         <%= f.text_field :role_played, class: "form-control" %>
 </div>
 
 
-<div class="form-group col-md-1 remove-sub-form-button">
+<div class="form-group sf col-md-1 remove-sub-form-button">
    <%= link_to_remove_association "Remove", f, class: "form-button btn btn-danger" %> 
 </div>
 
