--- a/app/views/highestsponsorshipofcsievents/new.html.erb
+++ b/app/views/highestsponsorshipofcsievents/new.html.erb
@@ -1,3 +1,3 @@
-<h3 align="center">Enter details for Highest Sponsorship of CSI Event Award</h2>
+<h3 align="center">Highest Sponsorship of CSI Events Award</h2>
 <br>
 <%= render "form" %>
