--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,33 +1,44 @@
-<h1 align="center" id="award-banner">The Computer Society of India</h1>
-
-<div class="container award-area">
-    
-<div class="award-title">
-    <h2><%= link_to "Best CSI International Students Event Host Award" , new_bestcsiinternationalstudentseventhost_path %> </h2>
-</div>
-<hr>
-<div class="award-title">
-    <h2><%= link_to "Highest Sponsorship of CSI Event Award" , new_highestsponsorshipofcsievent_path %> </h2>
-</div>
-<hr>
-<div class="award-title">
-    <h2><%= link_to "Longest Continuous SBC Award" ,new_longestcontinuoussbc_path %> </h2>
-</div>
-<hr>
-<div class="award-title">
-    <h2><%= link_to "Faculty with maximum publications Award" ,new_facmaxpublishing_path %> </h2>
-</div>
-
-<hr>
-<div class="award-title">
-    <h2><%= link_to "Student with maximum Publications Award" ,new_studentmaxpublishing_path %> </h2>
-</div>
-<hr>
-<div class="award-title">
-    <h2><%= link_to "Student Branch Activist Award" ,new_studentbranchactivist_path %> </h2>
-</div>
+<h1 align="center" id="award-banner">THE COMPUTER SOCIETY OF INDIA</h1>
 
 
 
+<div class="container">
+<div class="row">    
+<div class="col-md-5 award-area"> 
+<h3 class="award-head"align="center">ACADEMIC AWARDS</h3>
+<div class="award-title">
+    <p><%= link_to "Best CSI International Students Event Host Award" , new_bestcsiinternationalstudentseventhost_path %> </p>
+</div>
 
+<div class="award-title">
+    <p><%= link_to "Highest Sponsorship of CSI Event Award" , new_highestsponsorshipofcsievent_path %> </p>
+</div>
+
+<div class="award-title">
+    <p><%= link_to "Longest Continuous SBC Award" ,new_longestcontinuoussbc_path %> </p>
+</div>
+
+<div class="award-title">
+    <p><%= link_to "Faculty with maximum publishing  in CSI Publications" ,new_facmaxpublishing_path %> </p>
+</div>
+
+<div class="award-title">
+    <p><%= link_to "Paper Presenter at International Conference for Faculty" ,new_paperpresenter_path %> </p>
+</div>
+
+<div class="award-title">
+    <p><%= link_to "Students with maximum publishing – CSI publications" ,new_studentmaxpublishing_path %> </p>
+</div>
+
+<div class="award-title">
+    <p><%= link_to "Highest Committed Student Branch Activist Award" ,new_studentbranchactivist_path %> </p>
+</div>
+</div>
+
+<div class="col-md-5 award-area">  
+<h3  class="award-head servie-awards" align="center">SERVICE AWARDS</h3>
+
+<!--servie awards-->
+
+</div>
 </div>
