--- a/app/views/bestcsiinternationalstudentseventhosts/new.html.erb
+++ b/app/views/bestcsiinternationalstudentseventhosts/new.html.erb
@@ -1,4 +1,4 @@
-<h3 align="center">Enter Details for the Best CSI International Students Event Host Award</h2>
+<h3 align="center">Best CSI International Students Event Host Award</h2>
 
 <br>
 
