--- a/app/views/facmaxpublishings/new.html.erb
+++ b/app/views/facmaxpublishings/new.html.erb
@@ -1,3 +1,3 @@
-<h3 align="center">Enter award details for Faculty Maximum publications</h3>
+<h3 align="center">Faculty with maximum publishing in CSI Publications</h3>
 
 <%= render "form" %>
