--- a/app/views/studentbranchactivists/new.html.erb
+++ b/app/views/studentbranchactivists/new.html.erb
@@ -1,3 +1,3 @@
-<h3 align="center">Enter award details for Highest Student Branch Activist Award</h3>
+<h3 align="center">Highest Committed Student Branch Activist Award</h3>
 
 <%= render "form" %>
