--- a/app/views/studentmaxpublishings/new.html.erb
+++ b/app/views/studentmaxpublishings/new.html.erb
@@ -1,3 +1,3 @@
-<h3 align="center">Enter award details for Student with Maximum publications</h3>
+<h3 align="center">Students with maximum publishing – CSI publications</h3>
 
 <%= render "form" %>
