--- a/app/views/bestcsiinternationalstudentseventhosts/_form.html.erb
+++ b/app/views/bestcsiinternationalstudentseventhosts/_form.html.erb
@@ -3,14 +3,16 @@
 
 <%= form_for @bestcsiinternationalstudentseventhost, :html => {:class => "form-horizontal"} do |f| %>
     
-    
+     
     <div class="primary-form">
     <div class="row institution-details">
       <!--institution details-->
     <p class="primary-form-subheading">Institution Details</p>  
     <div class="form-group col-md-6">
-     <label>Name</label>
-     <input type="text" class="form-control" id="name">   
+     <%= f.fields_for :institute, @institute do |institute| %>
+      <label>Name</label>
+      <%= institute.autocomplete_field :name, autocomplete_institute_name_institutes_path ,id: "name" , class: "form-control" %>
+     <% end %>    
     </div>
     <div class="form-group col-md-6">
       <label>Postal Address</label>
